--- a/values-kube-prometheus-stack.yaml
+++ b/values-kube-prometheus-stack.yaml
@@ -3137,7 +3137,7 @@ prometheus:
       image: "quay.io/thanos/thanos:v0.27.0"
       objectStorageConfig:
         key: objstore.yml
-        name: thanos-objstore-secret
+        name: objstore-secret
       version: v0.27.0
 
     ## Containers allows injecting additional containers. This is meant to allow adding an authentication proxy to a Prometheus pod.
