--- a/values-thanos.yaml
+++ b/values-thanos.yaml
@@ -83,7 +83,7 @@ bucketCacheConfig: ""
 ## @param existingObjstoreSecret Secret with Objstore Configuration
 ## Note: This will override objstoreConfig
 ##
-existingObjstoreSecret: "thanos-objsto-secret"
+existingObjstoreSecret: "objsto-secret"
 ## @param existingObjstoreSecretItems Optional item list for specifying a custom Secret key. If so, path should be objstore.yml
 ##
 existingObjstoreSecretItems: []
